<resources>
    <string name="app_name">AndroidGoApp</string>
    <string name="hello">Welcome to the Go-App! Please choose a username...</string>
    <string name="enter_text">Username...</string>
    <string name="next">NEXT</string>
    <string name="group_string">For the new group please choose a groupname...</string>
    <string name="groupname_string">Groupname...</string>
    <string name="helpstring">......................................................................................................</string>
    <string name="appointment">Mustertreffen</string>
    <string name="go">GO</string>
    <string name="add_member_string">+</string>
    <string name="create_appointment">Please pick a time, a date and a place:</string>
    <string name="pick_time">time</string>
    <string name="pick_date">date</string>
    <string name="pick_place">place</string>
    <string name="show_old_username_string">Your old username is</string>
    <string name="old_username_string">Musterusername</string>
    <string name="choose_new_username_string">Please choose a new one:</string>
    <string name="show_old_groupname_string">Your old groupname is</string>
    <string name="old_groupname_string">Mustergroupname</string>
    <string name="choose_new_groupname_string">Please choose a new one:</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">close navigation drawer</string>
    <string name="preference_file_key">com.example.myapp.PREFERENCE_FILE_KEY</string>
    <string name="username">username</string>
    <string name="welcome">Welcome </string>
    <string name="groupname">groupname</string>
    <string name="choose_option">Please choose an option for </string>
    <string name="delete_group">Delete Group</string>
    <string name="change_groupname">Change groupname</string>
    <string name="are_sure_leave">Are you sure you want to leave the group</string>
    <string name="are_sure_delete">Are you sure you want to delete the group</string>
    <string name="are_sure_leave_app">Are you sure you want to leave the app</string>
    <string name="addgroup">+ add Group</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="to_long">Please choose a shorter name</string>
    <string name="no_name">Please choose a name</string>
    <string name="signs">Please use only letters and cyphers</string>


    <string name="errorUpgradeToAdmin">Benutzer zu Administrator machen war nicht erfolgreich.</string>



    <string name="registrationSuccessful">Registrierung war erfolgreich.</string>
    <string name="registrationNotSuccessful">Registrierung war nicht erfolgreich.</string>
    <string name="createGroupSuccessful">Gruppe wurde erstellt.</string>
    <string name="createGroupNotSuccessful">Gruppe konnte leider nicht erstellt werden.</string>
    <string name="setAppointmentSuccessful">Treffpunkt wurde festgelegt.</string>
    <string name="setAppointmentNotSuccessful">Treffpunkt konnte leider nicht festgelegt werden.</string>
    <string name="sendLinkWasNotSuccessful">Link erstellen war leider nicht erfolgreich.</string>
    <string name="joinGroupMessage">Link zu meiner Gruppe in GoApp.</string>

    <!-- shared Preferences -->
    <string name="sharedUserId">111111111</string>
    <string name="sharedUserName">sharedUserName</string>
    <string name="sharedUserName_default">defaultGroupName</string>
    <string name="selectedPlace">selectedPlace</string>
    <string name="selectedLongitude">selectedLongitude</string>
    <string name="selectedLatitude">selectedLatitude</string>
    <string name="selectedDay">selectedDay</string>
    <string name="selectedMonth">selectedMonth</string>
    <string name="selectedYear">selectedYear</string>
    <string name="selectedHour">selectedHour</string>
    <string name="selectedMin">selectedMin</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="find">Find</string>



</resources>
