<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/groupname_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/groupname"
        android:textColor="#FFFFFFFF"
        android:background="#FFFF0000"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"/>

    <Button
        android:id="@+id/help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpstring"
        android:textColor="#FFFF0000"
        android:background="#FFFF0000"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/groupname_button"
        />

    <Button
        android:id="@+id/appointment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appointment"
        android:textColor="#FFFFFFFF"
        android:background="#FFFF0000"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/logo"
        android:layout_below="@+id/groupname_button"/>

    <TextView
        android:id="@+id/create_appointment_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="26sp"
        android:text="@string/create_appointment"
        android:layout_below="@+id/logo" />

    <Button
        android:id="@+id/time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_time"
        android:layout_below="@+id/create_appointment_textview"
        android:layout_alignParentLeft="true"
        android:onClick="showTimePickerDialog" />

    <Button
        android:id="@+id/date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_date"
        android:layout_below="@+id/create_appointment_textview"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/place_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_place"
        android:layout_below="@+id/create_appointment_textview"
        android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/next_appointment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_below="@+id/date_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp" />

</RelativeLayout>