<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/logo"/>

    <TextView
        android:id="@+id/show_old_groupname_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/old_groupname_textview"
        android:layout_centerHorizontal="true"
        android:text="@string/show_old_groupname_string"
        android:textColor="#000000"
        android:textSize="26sp"/>

    <TextView
        android:id="@+id/old_groupname_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/choose_new_groupname_textview"
        android:layout_centerHorizontal="true"
        android:text="@string/old_groupname_string"
        android:textColor="#000000"
        android:textSize="26sp"/>

    <TextView
        android:id="@+id/choose_new_groupname_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/choose_new_groupname_string"
        android:textColor="#000000"
        android:textSize="26sp"/>

    <EditText
        android:id="@+id/input_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_new_groupname_textview"
        android:hint="@string/enter_text"
        android:maxLines="1"/>

    <Button
        android:id="@+id/next_change_groupname_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/input_edit_text"
        android:text="@string/next"/>


</RelativeLayout>