<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/are_you_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_sure_leave_app" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/yes_app_button"
            android:text="@string/yes"
            android:layout_width="140dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/no_app_button"
            android:text="@string/no"
            android:layout_width="140dp"
            android:layout_height="wrap_content" />

    </TableRow>

</LinearLayout>