<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/logo"/>

    <TextView
        android:id="@+id/hello_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/input_edittext"
        android:layout_centerHorizontal="true"
        android:text="@string/hello"
        android:textColor="#000000"
        android:textSize="26sp"/>

    <EditText
        android:id="@id/input_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/enter_text"
        android:maxLines="1"/>

    <Button
        android:id="@+id/next_registration_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_edittext"
        android:layout_centerHorizontal="true"
        android:text="@string/next"/>


</RelativeLayout>