<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <org.osmdroid.views.MapView android:id="@+id/map"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <Button
            android:id="@+id/groupname_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/groupname"
            android:textColor="#FFFFFFFF"
            android:background="#FFFF0000"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>

        <Button
            android:id="@+id/help_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helpstring"
            android:textColor="#FFFF0000"
            android:background="#FFFF0000"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/groupname_button"
            />


        <Button
            android:id="@+id/appointment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appointment"
            android:textColor="#FFFFFFFF"
            android:background="#FFFF0000"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true" />

        <Button
            android:id="@+id/go_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:textColor="#FFFFFFFF"
            android:background="#FFFF0000"
            android:shape="ring"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
    <!-- The navigation drawer -->
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#ffffff"/>

</android.support.v4.widget.DrawerLayout>